fix align

--- a/src/app/team/member-card/member-card.component.css
+++ b/src/app/team/member-card/member-card.component.css
@@ -6,6 +6,7 @@ mat-card{
 
 .position{
   margin-top: 0px;
+  margin-bottom: 5px;
 }
 
 .name{
